# Cpp-practice-tasks

./: README.md
CMake-Test-Task/: .gitignore  CMakeLists.txt
CMake-Test-Task/src/: CMakeLists.txt
Cmake-practice/: .gitignore  CMakeLists.txt  calculator.cpp  main.cpp
gcc-practice/: add.cpp  calculator.h  calculator_main  divide.cpp  hello  main.cpp  multiply.cpp  sub.cpp
